feat: added client redis for save token

--- a/example.env
+++ b/example.env
@@ -2,3 +2,8 @@
 STRAVA_ACTIVITIES_AFTER=1745767805
 STRAVA_CLIENT_ID=12345
 STRAVA_CLIENT_SECRET=6aabcd5egseh65451732165742ef5sdg
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_USERNAME=user
+REDIS_PASSWORD=pass
