--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ dependencies = [
     "polyline>=2.0.2",
     "pydantic-settings>=2.9.1",
     "python-dotenv>=1.1.0",
+    "redis>=6.1.0",
     "requests>=2.32.3",
 ]
