feat: save files in new repo

--- a/example.env
+++ b/example.env
@@ -7,3 +7,6 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_USERNAME=user
 REDIS_PASSWORD=pass
+
+GITHUB_TOKEN=ghp_dUakjghbiuqregireqgLTrOpfMB0X6me9
+GITHUB_REPO_URL_SAVE_FILES=https://github.com/alves-dev/repo-name.git
