--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.10"
 dependencies = [
+    "gitpython>=3.1.44",
     "polyline>=2.0.2",
     "pydantic-settings>=2.9.1",
     "python-dotenv>=1.1.0",
